--- a/CompozeElectron/Styles/_thisproject.scss
+++ b/CompozeElectron/Styles/_thisproject.scss
@@ -82,9 +82,27 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
-textarea {
+.text-editor {
     min-height: 500px;
     max-width: 100%;
     margin: 0px;
     font-size: 12pt;
+}
+
+.highlight {
+    padding: 0;
+    background-color: rgb(111, 203, 228);
+    color: $txt-dark;
+}
+
+.button-x {
+    height: 20px;
+    width: 20px;
+    background-color: darken($bg-light, 10%);
+    border: 1px black solid;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
