fixed button styles & darkmode styles. added header editing for projects

--- a/CompozeElectron/Views/Shared/_Layout.cshtml
+++ b/CompozeElectron/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 </head>
 <body>
     <header class="recolor-bg recolor-border">
-        <div class="navbar nav-dark recolor-bg">
+        <div class="navbar nav-dark recolor-bg recolor-border">
             <div class="item-holder recolor-bg">
                 <p class="nav-title"><a asp-area="" asp-controller="Home" asp-action="Index">Compoze</a></p>
                 @if(User.Identity.IsAuthenticated)
