--- a/CompozeElectron/Styles/_forms.scss
+++ b/CompozeElectron/Styles/_forms.scss
@@ -80,3 +80,13 @@ button {
     font-size: 12pt;
     flex-basis: 1;
 }
+
+.no-form-style {
+    background: none;
+    padding: 0;
+    >* {
+        margin: 0;
+        height: 90%;
+        width: 100%;
+    }
+}
