move docs, delete all docs when proj is deleted, default category & error checking w doc names

--- a/CompozeElectron/Styles/_thisproject.scss
+++ b/CompozeElectron/Styles/_thisproject.scss
@@ -44,6 +44,7 @@
     border-radius: 5px;
     width: 70%;
     margin-left: 1rem;
+    cursor: pointer;
 }
 
 .project-name {
@@ -109,4 +110,16 @@
 
 [contenteditable] {
     outline: 0px solid transparent;
+}
+
+.docinfo {
+    font-size: 14pt;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.smallbtn {
+    width: 50%;
+    height: 20%;
 }
