--- a/CompozeElectron/Styles/_thisproject.scss
+++ b/CompozeElectron/Styles/_thisproject.scss
@@ -123,3 +123,19 @@
     width: 50%;
     height: 20%;
 }
+
+.h-auto {
+    height: auto;
+}
+
+.h-150 {
+    height: 150px;
+}
+
+.mh-20 {
+    min-height: 20px;
+}
+
+.h-40 {
+    height: 40px;
+}
