--- a/CompozeElectron/Views/UserInfo/SearchDocuments.cshtml
+++ b/CompozeElectron/Views/UserInfo/SearchDocuments.cshtml
@@ -10,6 +10,7 @@
     @Html.Partial("_ProjectList", model)
     <div class="col-9 border-round background-lighter dashboard-box">
         <div class="p-0 stack">
+            <h2>@ViewData["Title"]</h2>
         </div>
     </div>
 </div>
